feat: add PaymentController class for payment processing functionality